added test classes for DB and UserData